@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Obeo.
+# Copyright (c) 2021, 2022 Obeo.
 # This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v2.0
 # which accompanies this distribution, and is available at
@@ -55,6 +55,7 @@ _UI_Unknown_datatype= Value
 _UI_View_descriptions_feature = Descriptions
 _UI_RepresentationDescription_name_feature = Name
 _UI_RepresentationDescription_domainType_feature = Domain Type
+_UI_RepresentationDescription_preconditionExpression_feature = Precondition Expression
 _UI_RepresentationDescription_titleExpression_feature = Title Expression
 _UI_DiagramDescription_autoLayout_feature = Auto Layout
 _UI_DiagramDescription_nodeDescriptions_feature = Node Descriptions
