@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <genmodel:GenModel xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns:ecore="http://www.eclipse.org/emf/2002/Ecore" xmlns:genmodel="http://www.eclipse.org/emf/2002/GenModel"
-    copyrightText="Copyright (c) 2021 Obeo.&#xA;This program and the accompanying materials&#xA;are made available under the terms of the Eclipse Public License v2.0&#xA;which accompanies this distribution, and is available at&#xA;https://www.eclipse.org/legal/epl-2.0/&#xA;&#xA;SPDX-License-Identifier: EPL-2.0&#xA;&#xA;Contributors:&#xA;     Obeo - initial API and implementation"
+    copyrightText="Copyright (c) 2021, 2022 Obeo.&#xA;This program and the accompanying materials&#xA;are made available under the terms of the Eclipse Public License v2.0&#xA;which accompanies this distribution, and is available at&#xA;https://www.eclipse.org/legal/epl-2.0/&#xA;&#xA;SPDX-License-Identifier: EPL-2.0&#xA;&#xA;Contributors:&#xA;     Obeo - initial API and implementation"
     modelDirectory="/sirius-web-view/src/main/java" creationIcons="false" editDirectory="/sirius-web-view-edit/src/main/java"
     editorDirectory="" modelPluginID="sirius-web-view" modelName="View" nonNLSMarkers="true"
     rootExtendsClass="org.eclipse.emf.ecore.impl.MinimalEObjectImpl$Container" codeFormatting="true"
@@ -42,6 +42,7 @@
     <genClasses ecoreClass="view.ecore#//RepresentationDescription">
       <genFeatures createChild="false" ecoreFeature="ecore:EAttribute view.ecore#//RepresentationDescription/name"/>
       <genFeatures createChild="false" ecoreFeature="ecore:EAttribute view.ecore#//RepresentationDescription/domainType"/>
+      <genFeatures createChild="false" ecoreFeature="ecore:EAttribute view.ecore#//RepresentationDescription/preconditionExpression"/>
       <genFeatures createChild="false" ecoreFeature="ecore:EAttribute view.ecore#//RepresentationDescription/titleExpression"/>
     </genClasses>
     <genClasses ecoreClass="view.ecore#//DiagramDescription">
